@@ -4,6 +4,7 @@ python-reahl (3.2.0) unstable; urgency=low
  * Added Bootstrap 3.3.4 and upgraded Jquery to 1.11.2 and jquery-blockUI to 2.70.0.
  * Added a ColumnLayout and ResponsiveSize for Bootstrap and refactored accordingly.
  * Added a layout.PageLayout to replace the pure.PageColumnLayout and can be used with bootstrap.ColumnLayout also.
+ * Extract DerivedAttributes class from Input class
 
  -- Iwan Vosloo <iwan@reahl.org>  Thu, 19 Mar 2015 13:18:00 +0200
 
